--- a/index.html
+++ b/index.html
@@ -25,7 +25,39 @@
     <p>Some Text</p><img src="images/responsive-layout-profile.png" alt="Profile Photo">
   </header>
 
-  <main></main>  
+  <main>
+    <h3 id="portfolio">PORTFOLIO</h2>
+    <div>
+      <img src="images/portfolio-1.png" alt="a picture of a marketing webpage">
+      <h2></h2>
+      <p></p>
+    </div>
+    <div>
+      <img src="images/portfolio-2.png" alt="a picture of a search engine webpage">
+      <h2></h2>
+      <p></p>
+    </div>
+    <div>
+      <img src="images/portfolio-3.png" alt="a picture of a travel app">
+      <h2></h2>
+      <p></p>
+    </div>
+    <div>
+      <img src="images/portfolio-4.png" alt="a picture of a mapping app">
+      <h2></h2>
+      <p></p>
+    </div>
+    <div>
+      <img src="images/portfolio-5.png" alt="a picture of a photo gallery">
+      <h2></h2>
+      <p></p>
+    </div>
+    <div>
+      <img src="images/portfolio-6.png" alt="a picture of a calculator app">
+      <h2></h2>
+      <p></p>
+    </div>
+  </main>  
   <footer></footer>
 </body>
 </html>
