added content to index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Responsive Website</title>
 </head>
 <body>
-  <header>
+  <header id="home">
       <h1>Gordon Munro</h1>
     <nav>
       <ul>
@@ -22,42 +22,64 @@
         <li><a href="#skills">SKILLS</a></li>
       </ul>
     </nav>
-    <p>Some Text</p><img src="images/responsive-layout-profile.png" alt="Profile Photo">
+    <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished learning front-end web developement at Treehouse and I am excited to put all my skills to use!</p><img src="images/responsive-layout-profile.png" alt="Profile Photo">
   </header>
 
   <main>
-    <h3 id="portfolio">PORTFOLIO</h2>
-    <div>
-      <img src="images/portfolio-1.png" alt="a picture of a marketing webpage">
-      <h2></h2>
-      <p></p>
-    </div>
-    <div>
-      <img src="images/portfolio-2.png" alt="a picture of a search engine webpage">
-      <h2></h2>
-      <p></p>
-    </div>
-    <div>
-      <img src="images/portfolio-3.png" alt="a picture of a travel app">
-      <h2></h2>
-      <p></p>
-    </div>
-    <div>
-      <img src="images/portfolio-4.png" alt="a picture of a mapping app">
-      <h2></h2>
-      <p></p>
-    </div>
-    <div>
-      <img src="images/portfolio-5.png" alt="a picture of a photo gallery">
-      <h2></h2>
-      <p></p>
-    </div>
-    <div>
-      <img src="images/portfolio-6.png" alt="a picture of a calculator app">
-      <h2></h2>
-      <p></p>
-    </div>
-  </main>  
-  <footer></footer>
+    <section>
+      <h3 id="portfolio">PORTFOLIO</h2>
+      <div>
+        <img src="images/portfolio-1.png" alt="a picture of a marketing webpage">
+        <h2>Marketing Page</h2>
+        <p>This project shows the front page of a marketing website for a specific business I'm interested in.</p>
+      </div>
+      <div>
+        <img src="images/portfolio-2.png" alt="a picture of a search engine webpage">
+        <h2>Search Page</h2>
+        <p>This project searches through a specific database to find information that the user is trying to look up.</p>
+      </div>
+      <div>
+        <img src="images/portfolio-3.png" alt="a picture of a travel app">
+        <h2>Travel App</h2>
+        <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+      </div>
+      <div>
+        <img src="images/portfolio-4.png" alt="a picture of a mapping app">
+        <h2>Map of Favorite Spots</h2>
+        <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
+      </div>
+      <div>
+        <img src="images/portfolio-5.png" alt="a picture of a photo gallery">
+        <h2>Photo Gallery</h2>
+        <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigte through photos.</p>
+      </div>
+      <div>
+        <img src="images/portfolio-6.png" alt="a picture of a calculator app">
+        <h2>Calculator</h2>
+        <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+      </div>
+    </section>
+  </main>
+  <aside id="skills">
+    <h3>SKILLS</h3>
+  
+  </aside>
+  <section id="contact">
+    <h3>CONTACT</h3>
+    <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
+    <p>Phone: <strong>+1(111)555-1234</strong></p>
+    <p>Email: <strong>email@yoursite.com</strong></p>
+  </section>  
+  <footer>
+    <h3>Gordon Munro</h3>
+    <nav>
+      <ul>
+        <li><a href="#home">HOME</a></li>
+        <li><a href="#portfolio">PORTFOLIO</a></li>
+        <li><a href="#contact">CONTACT</a></li>
+        <li><a href="#skills">SKILLS</a></li>
+      </ul>
+    </nav>
+  </footer>
 </body>
 </html>
