--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
   <header id="home">
-      <h1>Gordon Munro</h1>
-    <nav>
+    <h1>Gordon Munro</h1>
+    <nav class="main-nav">
       <ul>
         <li><a href="#home">HOME</a></li>
         <li><a href="#portfolio">PORTFOLIO</a></li>
