--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
 <body>
   
   <header id="home">
-    <h1>Gordon Munro</h1>
-    <nav>
-      <ul class="main-nav">
-        <li><a href="#home">HOME</a></li>
-        <li><a href="#portfolio">PORTFOLIO</a></li>
-        <li><a href="#contact">CONTACT</a></li>
-        <li><a href="#skills">SKILLS</a></li>
-      </ul>
-    </nav>
+    <div class="header-nav">
+      <h1>Gordon Munro</h1>
+      <nav>
+        <ul class="main-nav">
+          <li><a href="#home">HOME</a></li>
+          <li><a href="#portfolio">PORTFOLIO</a></li>
+          <li><a href="#contact">CONTACT</a></li>
+          <li><a href="#skills">SKILLS</a></li>
+        </ul>
+      </nav>
+    </div>
     <div id="prof-img">
       <img src="images/responsive-layout-profile.png" class="port header-image" alt="Profile Photo">
       <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished learning front-end web developement at Treehouse and I am excited to put all my skills to use!</p>
@@ -32,7 +34,7 @@
   <main>
     <h3>PORTFOLIO</h2>
     <section id="portfolio">
-      <!-- <div class="row"> -->
+      <!-- <div class="-large-row"> -->
         
         <div class="row">
           <img src="images/portfolio-1.png" class="port" alt="a picture of a marketing webpage">
@@ -51,7 +53,7 @@
           <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
         </div>
       <!-- </div> -->
-      <!-- <div class="row"> -->
+      <!-- <div class="large-row"> -->
       <div class="row">
         <img src="images/portfolio-4.png" class="port" alt="a picture of a mapping app">
         <h2>Map of Favorite Spots</h2>
@@ -81,11 +83,12 @@
       <li>Graphic Design</li>
     </ul>
   </aside>
+</div>
   <section id="contact">
     <h3>CONTACT</h3>
-    <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
+    <p class="cont">If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
     <p>Phone: <strong>+1(111)555-1234</strong></p>
-    <p>Email: <strong>email@yoursite.com</strong></p>
+    <p>Email: <strong><a href="mailto:email@yoursite.com">email@yoursite.com</a></strong></p>
   </section>  
   <footer>
     <hr>
@@ -101,6 +104,5 @@
       <li><a href="#skills">SKILLS</a></li>
     </ul>
   </footer>
-</div>
 </body>
 </html>
