--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
   </section>  
   <footer>
     <hr>
+  <nav>
     <ul class="foot-nav mob-foot">
       <li class="foot-name">Gordon Munro</li>
       <li><a href="#home">BACK TO TOP</a><li>
@@ -99,6 +100,7 @@
       <li><a href="#contact">CONTACT</a></li>
       <li><a href="#skills">SKILLS</a></li>
     </ul>
+  </nav>
   </footer>
 </body>
 </html>
